--- a/index.html
+++ b/index.html
@@ -102,5 +102,8 @@
       </div>
 
     </section>
+     <footer>
+    Made with ❤️by Sumit Rana , BCA - Maharaja Surajmal Institute  .
+  </footer>
   </body>
 </html>
