--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         
       </div>
        <footer style="color: white; font-size: larger;">
-        Made with ❤️by Sumit Rana .
+        Made with ❤️by Sumit Rana , Maharaja Surajmal Institute .
       </footer>
 
 
