--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         
       </div>
-       <footer style="color: white; font-size: larger;">
+       <footer class="foot">
         Made with ❤️by Sumit Rana , Maharaja Surajmal Institute .
       </footer>
 
